--- a/Uaine.Random/Uaine.Random.csproj
+++ b/Uaine.Random/Uaine.Random.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard1.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Uaine.Objects" Version="1.6.0" />
+  </ItemGroup>
 
 </Project>
