--- a/Uaine.Random/Uaine.Random.csproj
+++ b/Uaine.Random/Uaine.Random.csproj
@@ -2,10 +2,29 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.0</TargetFramework>
+    <Authors>Daniel Stamer-Squair</Authors>
+    <Company>Uaine Teine</Company>
+    <RepositoryType>rng</RepositoryType>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageIconUrl />
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Copyright>Daniel Stamer-Squair 2021</Copyright>
+    <Description>A System.Random extension class with additional functions</Description>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Uaine.Objects" Version="1.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\icon.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
