--1.0.1-- Random sequence functions coded in to return a series of numbers of various types Random bool function now has a chance modifier

--- a/Uaine.Random/Uaine.Random.csproj
+++ b/Uaine.Random/Uaine.Random.csproj
@@ -10,6 +10,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Copyright>Daniel Stamer-Squair 2021</Copyright>
     <Description>A System.Random extension class with additional functions</Description>
+    <Version>1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
