--- a/Uaine.Random/Uaine.Random.csproj
+++ b/Uaine.Random/Uaine.Random.csproj
@@ -10,9 +10,10 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Copyright>Daniel Stamer-Squair 2022</Copyright>
     <Description>A System.Random extension class with additional functions</Description>
-    <Version>1.1.3</Version>
+    <Version>2.0</Version>
     <PackageProjectUrl>https://github.com/uaineteine/Uaine.Random</PackageProjectUrl>
     <RepositoryUrl>https://github.com/uaineteine/Uaine.Random</RepositoryUrl>
+    <AssemblyVersion>2.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
